coinswap-swift/coinswapFFI.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V4 in this file.           ⚠️

typedef struct RustBuffer
{
    uint64_t capacity;
    uint64_t len;
    uint8_t *_Nullable data;
} RustBuffer;
// Error definitions
typedef struct RustCallStatus {
    int8_t code;
    RustBuffer errorBuf;
} RustCallStatus;
uint64_t uniffi_coinswap_ffi_fn_constructor_taker_init(RustBuffer data_dir, RustBuffer wallet_file_name, RustBuffer rpc_config, RustBuffer control_port, RustBuffer tor_auth_password, RustBuffer zmq_addr, RustBuffer password, RustCallStatus *_Nonnull out_status
);
void uniffi_coinswap_ffi_fn_method_taker_backup(uint64_t ptr, RustBuffer destination_path, RustBuffer password, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_coinswap_ffi_fn_method_taker_display_offer(uint64_t ptr, RustBuffer maker_offer, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_coinswap_ffi_fn_method_taker_do_coinswap(uint64_t ptr, RustBuffer swap_params, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_coinswap_ffi_fn_method_taker_fetch_all_makers(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_coinswap_ffi_fn_method_taker_fetch_offers(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_coinswap_ffi_fn_method_taker_get_balances(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_coinswap_ffi_fn_method_taker_get_next_external_address(uint64_t ptr, RustBuffer address_type, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_coinswap_ffi_fn_method_taker_get_next_internal_addresses(uint64_t ptr, uint32_t count, RustBuffer address_type, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_coinswap_ffi_fn_method_taker_get_transactions(uint64_t ptr, RustBuffer count, RustBuffer skip, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_coinswap_ffi_fn_method_taker_get_wallet_name(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
int8_t uniffi_coinswap_ffi_fn_method_taker_is_offerbook_syncing(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_coinswap_ffi_fn_method_taker_list_all_utxo_spend_info(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
void uniffi_coinswap_ffi_fn_method_taker_lock_unspendable_utxos(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
void uniffi_coinswap_ffi_fn_method_taker_recover_from_swap(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
void uniffi_coinswap_ffi_fn_method_taker_run_offer_sync_now(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_coinswap_ffi_fn_method_taker_send_to_address(uint64_t ptr, RustBuffer address, int64_t amount, RustBuffer fee_rate, RustBuffer manually_selected_outpoints, RustCallStatus *_Nonnull out_status
);
void uniffi_coinswap_ffi_fn_method_taker_setup_logging(uint64_t ptr, RustBuffer data_dir, RustBuffer log_level, RustCallStatus *_Nonnull out_status
);
void uniffi_coinswap_ffi_fn_method_taker_sync_and_save(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_coinswap_ffi_fn_constructor_taproottaker_init(RustBuffer data_dir, RustBuffer wallet_file_name, RustBuffer rpc_config, RustBuffer control_port, RustBuffer tor_auth_password, RustBuffer zmq_addr, RustBuffer password, RustCallStatus *_Nonnull out_status
);
void uniffi_coinswap_ffi_fn_method_taproottaker_backup(uint64_t ptr, RustBuffer destination_path, RustBuffer password, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_coinswap_ffi_fn_method_taproottaker_display_offer(uint64_t ptr, RustBuffer maker_offer, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_coinswap_ffi_fn_method_taproottaker_do_coinswap(uint64_t ptr, RustBuffer swap_params, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_coinswap_ffi_fn_method_taproottaker_fetch_all_makers(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_coinswap_ffi_fn_method_taproottaker_fetch_offers(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_coinswap_ffi_fn_method_taproottaker_get_balances(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_coinswap_ffi_fn_method_taproottaker_get_next_external_address(uint64_t ptr, RustBuffer address_type, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_coinswap_ffi_fn_method_taproottaker_get_next_internal_addresses(uint64_t ptr, uint32_t count, RustBuffer address_type, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_coinswap_ffi_fn_method_taproottaker_get_transactions(uint64_t ptr, RustBuffer count, RustBuffer skip, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_coinswap_ffi_fn_method_taproottaker_get_wallet_name(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
int8_t uniffi_coinswap_ffi_fn_method_taproottaker_is_offerbook_syncing(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_coinswap_ffi_fn_method_taproottaker_list_all_utxo_spend_info(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
void uniffi_coinswap_ffi_fn_method_taproottaker_lock_unspendable_utxos(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
void uniffi_coinswap_ffi_fn_method_taproottaker_recover_from_swap(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
void uniffi_coinswap_ffi_fn_method_taproottaker_run_offer_sync_now(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_coinswap_ffi_fn_method_taproottaker_send_to_address(uint64_t ptr, RustBuffer address, int64_t amount, RustBuffer fee_rate, RustBuffer manually_selected_outpoints, RustCallStatus *_Nonnull out_status
);
void uniffi_coinswap_ffi_fn_method_taproottaker_setup_logging(uint64_t ptr, RustBuffer data_dir, RustBuffer log_level, RustCallStatus *_Nonnull out_status
);
void uniffi_coinswap_ffi_fn_method_taproottaker_sync_and_save(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
uint16_t uniffi_coinswap_ffi_checksum_func_create_default_rpc_config(void
    
);
uint16_t uniffi_coinswap_ffi_checksum_func_fetch_mempool_fees(void
    
);
uint16_t uniffi_coinswap_ffi_checksum_func_is_wallet_encrypted(void
    
);
uint16_t uniffi_coinswap_ffi_checksum_func_restore_wallet_gui_app(void
    
);
uint16_t uniffi_coinswap_ffi_checksum_func_setup_logging(void
    
);
uint16_t uniffi_coinswap_ffi_checksum_method_taker_backup(void
    
);
uint16_t uniffi_coinswap_ffi_checksum_method_taker_display_offer(void
    
);
uint16_t uniffi_coinswap_ffi_checksum_method_taker_do_coinswap(void
    
);
uint16_t uniffi_coinswap_ffi_checksum_method_taker_fetch_all_makers(void
    
);
uint16_t uniffi_coinswap_ffi_checksum_method_taker_fetch_offers(void
    
);
uint16_t uniffi_coinswap_ffi_checksum_constructor_taker_init(void
    
);
uint32_t ffi_coinswap_ffi_uniffi_contract_version(void
    
);