coinswap-python/coinswap.py

_UniffiLib.uniffi_coinswap_ffi_fn_constructor_taker_init.argtypes = (
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_coinswap_ffi_fn_constructor_taker_init.restype = ctypes.c_uint64
_UniffiLib.uniffi_coinswap_ffi_fn_method_taker_backup.argtypes = (
    ctypes.c_uint64,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_coinswap_ffi_fn_method_taker_backup.restype = None
_UniffiLib.uniffi_coinswap_ffi_fn_method_taker_display_offer.argtypes = (
    ctypes.c_uint64,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_coinswap_ffi_fn_method_taker_display_offer.restype = _UniffiRustBuffer
_UniffiLib.uniffi_coinswap_ffi_fn_method_taker_do_coinswap.argtypes = (
    ctypes.c_uint64,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_coinswap_ffi_fn_method_taker_do_coinswap.restype = _UniffiRustBuffer
_UniffiLib.uniffi_coinswap_ffi_fn_method_taker_fetch_all_makers.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_coinswap_ffi_fn_method_taker_fetch_all_makers.restype = _UniffiRustBuffer
_UniffiLib.uniffi_coinswap_ffi_fn_method_taker_fetch_offers.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_coinswap_ffi_fn_method_taker_fetch_offers.restype = _UniffiRustBuffer
_UniffiLib.uniffi_coinswap_ffi_fn_method_taker_get_balances.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_coinswap_ffi_fn_method_taker_get_balances.restype = _UniffiRustBuffer
_UniffiLib.uniffi_coinswap_ffi_fn_method_taker_get_next_external_address.argtypes = (
    ctypes.c_uint64,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_coinswap_ffi_fn_method_taker_get_next_external_address.restype = _UniffiRustBuffer
_UniffiLib.uniffi_coinswap_ffi_fn_method_taker_get_next_internal_addresses.argtypes = (
    ctypes.c_uint64,
    ctypes.c_uint32,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_coinswap_ffi_fn_method_taker_get_next_internal_addresses.restype = _UniffiRustBuffer
_UniffiLib.uniffi_coinswap_ffi_fn_method_taker_get_transactions.argtypes = (
    ctypes.c_uint64,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_coinswap_ffi_fn_method_taker_get_transactions.restype = _UniffiRustBuffer
_UniffiLib.uniffi_coinswap_ffi_fn_method_taker_get_wallet_name.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_coinswap_ffi_fn_method_taker_get_wallet_name.restype = _UniffiRustBuffer
_UniffiLib.uniffi_coinswap_ffi_fn_method_taker_is_offerbook_syncing.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_coinswap_ffi_fn_method_taker_is_offerbook_syncing.restype = ctypes.c_int8
_UniffiLib.uniffi_coinswap_ffi_fn_method_taker_list_all_utxo_spend_info.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_coinswap_ffi_fn_method_taker_list_all_utxo_spend_info.restype = _UniffiRustBuffer
_UniffiLib.uniffi_coinswap_ffi_fn_method_taker_lock_unspendable_utxos.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_coinswap_ffi_fn_method_taker_lock_unspendable_utxos.restype = None
_UniffiLib.uniffi_coinswap_ffi_fn_method_taker_recover_from_swap.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_coinswap_ffi_fn_method_taker_recover_from_swap.restype = None
_UniffiLib.uniffi_coinswap_ffi_fn_method_taker_run_offer_sync_now.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_coinswap_ffi_fn_method_taker_run_offer_sync_now.restype = None
_UniffiLib.uniffi_coinswap_ffi_fn_method_taker_send_to_address.argtypes = (
    ctypes.c_uint64,
    _UniffiRustBuffer,
    ctypes.c_int64,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_coinswap_ffi_fn_method_taker_send_to_address.restype = _UniffiRustBuffer
_UniffiLib.uniffi_coinswap_ffi_fn_method_taker_setup_logging.argtypes = (
    ctypes.c_uint64,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_coinswap_ffi_fn_method_taker_setup_logging.restype = None
_UniffiLib.uniffi_coinswap_ffi_fn_method_taker_sync_and_save.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_coinswap_ffi_fn_method_taker_sync_and_save.restype = None
_UniffiLib.uniffi_coinswap_ffi_fn_constructor_taproottaker_init.argtypes = (
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_coinswap_ffi_fn_constructor_taproottaker_init.restype = ctypes.c_uint64
_UniffiLib.uniffi_coinswap_ffi_fn_method_taproottaker_backup.argtypes = (
    ctypes.c_uint64,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_coinswap_ffi_fn_method_taproottaker_backup.restype = None
_UniffiLib.uniffi_coinswap_ffi_fn_method_taproottaker_display_offer.argtypes = (
    ctypes.c_uint64,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_coinswap_ffi_fn_method_taproottaker_display_offer.restype = _UniffiRustBuffer
_UniffiLib.uniffi_coinswap_ffi_fn_method_taproottaker_do_coinswap.argtypes = (
    ctypes.c_uint64,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_coinswap_ffi_fn_method_taproottaker_do_coinswap.restype = _UniffiRustBuffer
_UniffiLib.uniffi_coinswap_ffi_fn_method_taproottaker_fetch_all_makers.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_coinswap_ffi_fn_method_taproottaker_fetch_all_makers.restype = _UniffiRustBuffer
_UniffiLib.uniffi_coinswap_ffi_fn_method_taproottaker_fetch_offers.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_coinswap_ffi_fn_method_taproottaker_fetch_offers.restype = _UniffiRustBuffer
_UniffiLib.uniffi_coinswap_ffi_fn_method_taproottaker_get_balances.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_coinswap_ffi_fn_method_taproottaker_get_balances.restype = _UniffiRustBuffer
_UniffiLib.uniffi_coinswap_ffi_fn_method_taproottaker_get_next_external_address.argtypes = (
    ctypes.c_uint64,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_coinswap_ffi_fn_method_taproottaker_get_next_external_address.restype = _UniffiRustBuffer
_UniffiLib.uniffi_coinswap_ffi_fn_method_taproottaker_get_next_internal_addresses.argtypes = (
    ctypes.c_uint64,
    ctypes.c_uint32,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_coinswap_ffi_fn_method_taproottaker_get_next_internal_addresses.restype = _UniffiRustBuffer
_UniffiLib.uniffi_coinswap_ffi_fn_method_taproottaker_get_transactions.argtypes = (
    ctypes.c_uint64,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_coinswap_ffi_fn_method_taproottaker_get_transactions.restype = _UniffiRustBuffer
_UniffiLib.uniffi_coinswap_ffi_fn_method_taproottaker_get_wallet_name.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_coinswap_ffi_fn_method_taproottaker_get_wallet_name.restype = _UniffiRustBuffer
_UniffiLib.uniffi_coinswap_ffi_fn_method_taproottaker_is_offerbook_syncing.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_coinswap_ffi_fn_method_taproottaker_is_offerbook_syncing.restype = ctypes.c_int8
_UniffiLib.uniffi_coinswap_ffi_fn_method_taproottaker_list_all_utxo_spend_info.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_coinswap_ffi_fn_method_taproottaker_list_all_utxo_spend_info.restype = _UniffiRustBuffer
_UniffiLib.uniffi_coinswap_ffi_fn_method_taproottaker_lock_unspendable_utxos.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_coinswap_ffi_fn_method_taproottaker_lock_unspendable_utxos.restype = None
_UniffiLib.uniffi_coinswap_ffi_fn_method_taproottaker_recover_from_swap.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_coinswap_ffi_fn_method_taproottaker_recover_from_swap.restype = None
_UniffiLib.uniffi_coinswap_ffi_fn_method_taproottaker_run_offer_sync_now.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_coinswap_ffi_fn_method_taproottaker_run_offer_sync_now.restype = None
_UniffiLib.uniffi_coinswap_ffi_fn_method_taproottaker_send_to_address.argtypes = (
    ctypes.c_uint64,
    _UniffiRustBuffer,
    ctypes.c_int64,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_coinswap_ffi_fn_method_taproottaker_send_to_address.restype = _UniffiRustBuffer
_UniffiLib.uniffi_coinswap_ffi_fn_method_taproottaker_setup_logging.argtypes = (
    ctypes.c_uint64,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_coinswap_ffi_fn_method_taproottaker_setup_logging.restype = None
_UniffiLib.uniffi_coinswap_ffi_fn_method_taproottaker_sync_and_save.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_coinswap_ffi_fn_method_taproottaker_sync_and_save.restype = None
_UniffiLib.ffi_coinswap_ffi_uniffi_contract_version.argtypes = (
)
_UniffiLib.ffi_coinswap_ffi_uniffi_contract_version.restype = ctypes.c_uint32
_UniffiLib.uniffi_coinswap_ffi_checksum_func_create_default_rpc_config.argtypes = (
)
_UniffiLib.uniffi_coinswap_ffi_checksum_func_create_default_rpc_config.restype = ctypes.c_uint16
_UniffiLib.uniffi_coinswap_ffi_checksum_func_fetch_mempool_fees.argtypes = (
)
_UniffiLib.uniffi_coinswap_ffi_checksum_func_fetch_mempool_fees.restype = ctypes.c_uint16
_UniffiLib.uniffi_coinswap_ffi_checksum_func_is_wallet_encrypted.argtypes = (
)
_UniffiLib.uniffi_coinswap_ffi_checksum_func_is_wallet_encrypted.restype = ctypes.c_uint16
_UniffiLib.uniffi_coinswap_ffi_checksum_func_restore_wallet_gui_app.argtypes = (
)
_UniffiLib.uniffi_coinswap_ffi_checksum_func_restore_wallet_gui_app.restype = ctypes.c_uint16
_UniffiLib.uniffi_coinswap_ffi_checksum_func_setup_logging.argtypes = (
)
_UniffiLib.uniffi_coinswap_ffi_checksum_func_setup_logging.restype = ctypes.c_uint16
_UniffiLib.uniffi_coinswap_ffi_checksum_constructor_taker_init.argtypes = (
)
_UniffiLib.uniffi_coinswap_ffi_checksum_constructor_taker_init.restype = ctypes.c_uint16
_UniffiLib.uniffi_coinswap_ffi_checksum_method_taker_backup.argtypes = (
)
_UniffiLib.uniffi_coinswap_ffi_checksum_method_taker_backup.restype = ctypes.c_uint16
_UniffiLib.uniffi_coinswap_ffi_checksum_method_taker_display_offer.argtypes = (
)
_UniffiLib.uniffi_coinswap_ffi_checksum_method_taker_display_offer.restype = ctypes.c_uint16
_UniffiLib.uniffi_coinswap_ffi_checksum_method_taker_do_coinswap.argtypes = (
)
_UniffiLib.uniffi_coinswap_ffi_checksum_method_taker_do_coinswap.restype = ctypes.c_uint16
_UniffiLib.uniffi_coinswap_ffi_checksum_method_taker_fetch_all_makers.argtypes = (
)
_UniffiLib.uniffi_coinswap_ffi_checksum_method_taker_fetch_all_makers.restype = ctypes.c_uint16
_UniffiLib.uniffi_coinswap_ffi_checksum_method_taker_fetch_offers.argtypes = (
)
